# MyLibrary

./: .gitignore  README.md  library.properties
.github/workflows/: ArduinoLint.yml  UnitTest.yml
src/: MyLibrary.hpp
src/MyLibrary/Algorithm/: Math.hpp
src/test/ArduinoLint/: ArduinoLint.ino
src/test/ArduinoLint/src/Algorithm/: Math.cpp
test/ArduinoLint/src/Ohter/: LinkErrorCheck.cpp
test/UnitTest/: CMakeLists.txt
test/UnitTest/Algorithm/: CMakeLists.txt  Math.cpp
